fix(LDS): calendar picker was not showing due to z-index, fixes #4

--- a/include/LD/assets/styles/override_lds.css
+++ b/include/LD/assets/styles/override_lds.css
@@ -14,6 +14,10 @@ hr {
   margin-right:5px;
   float:right;
 }
+
+.calendar {
+  z-index: 100000
+}
   
 .dvtCellInfo ul { 
    list-style-type: disc; 
